[gd_scene load_steps=3 format=2]

[ext_resource path="res://panels_joystick/joystick.gd" type="Script" id=1]
[ext_resource path="res://Joystick/Joystick.tscn" type="PackedScene" id=2]

[node name="JoystickPanel" type="VSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joystick" parent="." instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 540.0
margin_bottom = 928.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
joystick_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 940.0
margin_right = 540.0
margin_bottom = 960.0

[node name="Fixed" type="Button" parent="HBoxContainer"]
margin_right = 177.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Fixed"

[node name="Dynamic" type="Button" parent="HBoxContainer"]
margin_left = 181.0
margin_right = 358.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Dynamic"

[node name="Following" type="Button" parent="HBoxContainer"]
margin_left = 362.0
margin_right = 540.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Following"

[connection signal="pressed" from="HBoxContainer/Fixed" to="Joystick" method="_on_Fixed_pressed" flags=3]
[connection signal="pressed" from="HBoxContainer/Dynamic" to="Joystick" method="_on_Dynamic_pressed" flags=3]
[connection signal="pressed" from="HBoxContainer/Following" to="Joystick" method="_on_Following_pressed" flags=3]
